--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form action="/" method="post">
         <label for="zipInput">Zip Code: </label>
         <input id = "zipInput" type="text" name="zipInput">
-        <input id = "CityID" type="text" name="cityId">
+        <input id = "CityId" type="text" name="cityId">
         <button type="submit">Go</button>
     </form>
 
